fixed z-index for current date and targetd date

--- a/src/components/doctor-appointment-profile/doctor-profile-appointment-components/doctor-profile-appointment-calendar.scss
+++ b/src/components/doctor-appointment-profile/doctor-profile-appointment-components/doctor-profile-appointment-calendar.scss
@@ -95,7 +95,7 @@
 
   abbr {
     position: relative;
-    z-index: 100;
+    z-index: 10;
   }
 
   &:before {
@@ -128,7 +128,7 @@
 
   abbr {
     position: relative;
-    z-index: 100;
+    z-index: 10;
   }
 
   &:before {
@@ -194,7 +194,7 @@
 
   abbr {
     position: relative;
-    z-index: 100;
+    z-index: 10;
   }
 
   &:before {
